# producer_consumer

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  Test.Dockerfile
Consumer/: CMakeLists.txt
Consumer/include/Adapter/CLI/: CommandFactory.h  CommandFactoryInterface.h  CommandInterface.h  Commands.h  Engine.h
Consumer/include/Adapter/CLI/Command/: ConsumerDaemonStart.h  ConsumerDaemonStatus.h  ConsumerDaemonStop.h  ShowHelp.h
Consumer/include/Adapter/Http/: RouterEntrypoint.h
Consumer/include/Adapter/Http/Resource/: ConsumerDaemonResource.h
Consumer/include/Adapter/Http/Resource/Factory/: ConsumerDaemonResourceFactory.h  ConsumerFactoryRoutingTable.h
Consumer/src/: main.cpp
Consumer/src/Adapter/CLI/: CommandFactory.cpp  Commands.cpp  Engine.cpp
Consumer/src/Adapter/CLI/Command/: ConsumerDaemonStart.cpp  ConsumerDaemonStatus.cpp  ConsumerDaemonStop.cpp  ShowHelp.cpp
Consumer/src/Adapter/Http/: RouterEntrypoint.cpp
Consumer/src/Adapter/Http/Resource/: ConsumerDaemonResource.cpp
Consumer/src/Adapter/Http/Resource/Factory/: ConsumerDaemonResourceFactory.cpp  ConsumerFactoryRoutingTable.cpp
Consumer/test/: CMakeLists.txt
Consumer/test/E2E/: CMakeLists.txt
Consumer/test/E2E/Adapter/CLI/: ConsumerDaemonTest.cpp
Consumer/test/Integration/Adapter/Http/: ConsumerDaemonResourceTest.cpp
ConsumerDaemon/: CMakeLists.txt
ConsumerDaemon/include/ConsumerDaemon/: Application.h  ConsumerDaemonChannelWithXMLMessageHandlerFactory.h  DefaultChannelWithXMLMessageHandlerFactory.h  MainChannelWithXMLMessageHandlerFactory.h  MessageBusAbstractFactory.h  MessageBusChannelHandlerFactoryInterface.h  MessageBusFactoryInterface.h  MessageBusXMLMessageFactory.h
ConsumerDaemon/src/: main.cpp
ConsumerDaemon/src/ConsumerDaemon/: Application.cpp  ConsumerDaemonChannelWithXMLMessageHandlerFactory.cpp  DefaultChannelWithXMLMessageHandlerFactory.cpp  MainChannelWithXMLMessageHandlerFactory.cpp  MessageBusAbstractFactory.cpp  MessageBusXMLMessageFactory.cpp
ConsumerDaemon/test/: CMakeLists.txt
ConsumerDaemon/test/Integration/ConsumerDaemon/: ApplicationTest.cpp
Foundation/: CMakeLists.txt
Foundation/include/Adapter/Http/: DefaultErrorHandler.h  DefaultErrorMessageParser.h  DefaultNotFoundErrorHandler.h  DefaultXMLErrorMessage.h
Foundation/include/Adapter/Validation/: AcceptedHttpContentTypeHeaders.h  AllowedHttpMethods.h
Foundation/include/Foundation/: Foundation.h
Foundation/include/Foundation/Http/: AbstractResource.h  ErrorHandlerBuilderInterface.h  ErrorMessageParserInterface.h  ResourceFactoryInterface.h  ResourceFactoryRoutingTableInterface.h  Router.h
Foundation/include/Foundation/IO/: AbstractFileReader.h  Console.h  FileReaderInterface.h
Foundation/include/Foundation/IPC/: AbstractBuffer.h  BoundedBuffer.h  BufferChannel.h  BufferInterface.h  ConsumerDaemon.h  ConsumerDaemonMessageBusChannel.h  ConsumerDefaultMessageBusInformation.h  DaemonLoop.h  DefaultMessageBusChannel.h  MainMessageBusChannel.h  MessageBus.h  MessageBusChannelInterface.h  MessageBusController.h  MessageBusFactory.h  MessageBusInformationInterface.h  String.h  StringVector.h
Foundation/include/Foundation/Message/: AbstractXmlMessage.h  Message.h  MessageInterface.h  MessageParser.h  (+2 more)
Foundation/test/: CMakeLists.txt
Foundation/test/Unit/: CMakeLists.txt
Producer/: CMakeLists.txt
Producer/include/Adapter/Http/: RouterEntrypoint.h
Producer/include/Adapter/Http/Resource/: MessageResource.h
Producer/include/Adapter/Http/Resource/Factory/: MessageResourceFactory.h  ProducerFactoryRoutingTable.h
Producer/include/Producer/: MessageService.h
Producer/src/Adapter/Http/: RouterEntrypoint.cpp
Producer/src/Adapter/Http/Resource/: MessageResource.cpp
Producer/src/Adapter/Http/Resource/Factory/: MessageResourceFactory.cpp  ProducerFactoryRoutingTable.cpp
Producer/src/Producer/: MessageService.cpp
Producer/test/Integration/: CMakeLists.txt
Producer/test/Integration/Adapter/Http/: MessageResourceTest.cpp
Producer/test/Integration/Producer/: MessageServiceTest.cpp
cmake/: ApplicationConfigFile.cmake  Autogenerated.cmake  ConfigFilesInstallation.cmake  DocumentationSettings.cmake  Doxygen.in  TestsConstants.cmake
data/settings/: application.txt  poco.load
data/source/: CMakeAutogenerated.h.in
data/templates/: http_error.xml  message.xml
docs/: Manually_installing_dependencies.md
docs/API/: Producer-Consumer.postman_collection.json
docs/doxygen/html/: AbstractBuffer_8cpp_source.html  AbstractBuffer_8h_source.html  AbstractFileReader_8cpp_source.html  AbstractFileReader_8h_source.html  AbstractResource_8cpp_source.html  AbstractResource_8h_source.html  AbstractXmlMessage_8cpp_source.html  AbstractXmlMessage_8h_source.html  AcceptedHttpContentTypeHeaders_8cpp_source.html  AcceptedHttpContentTypeHeaders_8h_source.html  AllowedHttpMethods_8cpp_source.html  AllowedHttpMethods_8h_source.html  Application_8cpp_source.html  Application_8h_source.html  BoundedBuffer_8cpp_source.html  BoundedBuffer_8h_source.html  BufferChannel_8cpp_source.html  BufferChannel_8h_source.html  BufferInterface_8h_source.html  CMakeAutogenerated_8h_source.html  CommandBinaryName_8h_source.html  CommandFactoryInterface_8h_source.html  CommandFactory_8cpp_source.html  CommandFactory_8h_source.html  CommandInterface_8h_source.html  Commands_8cpp_source.html  Commands_8h_source.html  ConsumerDaemonResourceFactory_8cpp_source.html  ConsumerDaemonResourceFactory_8h_source.html  ConsumerDaemonResource_8cpp_source.html  ConsumerDaemonResource_8h_source.html  ConsumerDaemonStart_8cpp_source.html  ConsumerDaemonStart_8h_source.html  ConsumerDaemonStatus_8cpp_source.html  ConsumerDaemonStatus_8h_source.html  ConsumerDaemonStop_8cpp_source.html  ConsumerDaemonStop_8h_source.html  ConsumerDaemon_2include_2ConsumerDaemon_2Application_8h_source.html  ConsumerDaemon_8cpp_source.html  ConsumerDaemon_8h_source.html  (+532 more)
scripts/: build-application.sh  run-all-tests.sh  run-coverage-html-report.sh  run-coverage-report.sh  run-gcov-report.sh  run-tests-coverage-report.sh  run-tests-lcov-report.sh
(+90 files in other folders)
